--- a/style.css
+++ b/style.css
@@ -1,101 +1,82 @@
-body{
-  font-family: "karla", sans-serif;
-  background-color: #d0d0ce;
-  min-height: 100vh;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
+
+* {
+  box-sizing: border-box;
 }
-.brand-wrapper{
-  margin-bottom: 19px;
-}
-.brand-wrapper .logo{
-  height: 90px;
-  padding-left: 70px;
-}
-.login-card{
-  border: 0;
-  border-radius: 27.5px;
-  box-shadow: 0 10px 30px 0 rgba(172, 168, 168, 0.43);
+
+body {
+  background-color: #b8c6db;
+
+  background-image: url('https://64.media.tumblr.com/38abe84b58c43eb0c231f4b289ad7f64/tumblr_oqhjqa871a1vsjcxvo1_540.gifv');
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
   overflow: hidden;
+  margin: 0;
+  font-weight:700;
 }
-.login-card-img{
-  border-radius: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
+
+.quiz-container {
+  background: linear-gradient(to right,#E975A8,
+  #726CF8);
+  color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
+  width: 600px;
+  overflow: hidden;
+box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  opacity: 0.9;
+
+
 }
-.login-card .card-body{
-  padding: 85px 60px 60px;
+
+.quiz-header {
+  padding: 4rem;
 }
-@media (max-width 422px) {
-  .login-card .card-body{
-    padding: 35px 24px;
-  }
+
+h2 {
+  padding: 1rem;
+  text-align: center;
+  margin: 0;
 }
-.login-card-description{
-  font-size: 25px;
-  color: #000;
-  font-weight: normal;
-  margin-bottom: 23px;
+
+ul {
+  list-style-type: none;
+  padding: 0;
 }
-.login-card form{
-  max-width: 326px;
+
+ul li {
+  font-size: 1.2rem;
+  margin: 1rem 0;
 }
-.login-card .form-control{
-  border: 1px solid #d5dae2;
-  padding: 15px 25px;
-  margin-bottom: 20px;
-  min-height: 45px;
-  font-size: 13px;
-  line-height: 15;
-  font-weight: normal;
+
+ul li label {
+  cursor: pointer;
 }
-.login-card .form-control::-webkit-input-placeholder{
-  color: #919aa3;
-}
-.login-card .form-control::-moz-input-placeholder{
-  color: #919aa3;
-}
-.login-card .form-control::-ms-input-placeholder{
-  color: #919aa3;
-}
-.login-card .form-control::-o-input-placeholder{
-  color: #919aa3;
-}
-.login-card .form-control::placeholder{
-  color: #919aa3;
-}
-.login-card .login-btn{
-  padding: 13px 20px 12px;
-  background-color: #000;
-  border-radius: 4px;
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 20px;
+
+button {
+background: rgb(34,195,104);
+background: linear-gradient(to right,#E975A8,
+#726CF8);
   color: #fff;
-  margin-bottom: 24px;
+  border: none;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-family: inherit;
+  padding: 1.3rem;
+  font-weight: bold;
 }
-.login-card .login-btn:hover{
-  border: 1px solid #000;
-  background-color: transparent;
-  color: #000;
+
+button:hover {
+  background-color: #732d91;
 }
-.login-card .forgot-password-link{
-  font-size: 14px;
-  color: #919aa3;
-  margin-bottom: 12px;
-}
-.login-card-footer-text{
-  font-size: 16px;
-  color: #0d2366;
-  margin-bottom: 60px;
-}
-@media (max-width: 767px) {
-  .login-card-footer-text{
-    margin-bottom: 24px;
-  }
-}
-.login-card-footer-nav a{
-  font-size: 14px;
-  color: #919aa3;
+
+button:focus {
+  outline: none;
+  background-color: #5e3370;
 }
