--- a/style/htmlquiz.css
+++ b/style/htmlquiz.css
@@ -7,7 +7,7 @@
 body {
   background-color: #b8c6db;
 
-  background-image: url(img2.jpg);
+  background-image: url('https://64.media.tumblr.com/38abe84b58c43eb0c231f4b289ad7f64/tumblr_oqhjqa871a1vsjcxvo1_540.gifv');
   font-family: 'Poppins', sans-serif;
   display: flex;
   align-items: center;
@@ -15,16 +15,22 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  font-weight:700;
 }
 
 .quiz-container {
-  background-color: #fff;
+  background: linear-gradient(to right,#E975A8,
+  #726CF8);
+  color: white;
   border-radius: 10px;
   box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
   width: 600px;
   overflow: hidden;
 box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  opacity: 0.9;
+
+
 }
 
 .quiz-header {
@@ -53,7 +59,8 @@ ul li label {
 
 button {
 background: rgb(34,195,104);
-background: linear-gradient(90deg, rgba(34,195,104,0.8155637254901961) 45%, rgba(192,253,45,1) 100%);
+background: linear-gradient(to right,#E975A8,
+#726CF8);
   color: #fff;
   border: none;
   display: block;
